--- a/package.json
+++ b/package.json
@@ -33,16 +33,17 @@
   },
   "homepage": "https://github.com/helpfulhuman/pure-redux-router#readme",
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^3.2.0",
-    "rollup": "^0.41.4",
+    "chai": "^4.1.2",
+    "mocha": "^3.5.0",
+    "rollup": "^0.49.3",
     "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-commonjs": "^7.0.0",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-watch": "^3.2.2",
-    "sinon": "^1.17.7"
+    "rollup-watch": "^4.3.1",
+    "sinon": "^3.2.1",
+    "sinon-chai": "^2.13.0"
   },
   "dependencies": {
-    "history": "^4.5.1"
+    "@helpfulhuman/router-kit": "^1.0.0",
+    "history": "^4.5.1",
+    "path-to-regexp": "^2.0.0"
   }
 }
