--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "homepage": "https://github.com/helpfulhuman/pure-redux-router#readme",
   "devDependencies": {
     "chai": "^4.1.2",
+    "del-cli": "^1.1.0",
     "mocha": "^3.5.0",
     "rollup": "^0.49.3",
     "rollup-plugin-buble": "^0.15.0",
