--- a/package.json
+++ b/package.json
@@ -33,17 +33,18 @@
   },
   "homepage": "https://github.com/helpfulhuman/pure-redux-router#readme",
   "devDependencies": {
+    "@helpfulhuman/router-kit": "^1.0.0",
     "chai": "^4.1.2",
     "del-cli": "^1.1.0",
     "mocha": "^3.5.0",
     "rollup": "^0.49.3",
     "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-watch": "^4.3.1",
     "sinon": "^3.2.1",
     "sinon-chai": "^2.13.0"
   },
   "dependencies": {
-    "@helpfulhuman/router-kit": "^1.0.0",
     "history": "^4.5.1",
     "path-to-regexp": "^2.0.0"
   }
