--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helpfulhuman/redux-router",
-  "version": "1.0.0-beta",
+  "version": "1.0.0",
   "description": "A routing solution for Redux applications.",
   "main": "dist/index.js",
   "jsnext:main": "dist/index.es.js",
